# motherlabsAI

./: .gitignore  ADAPTER_ARCHITECTURE.md  ALL_FIXES_COMPLETE.md  AUTONOMOUS_OPERATION.md  BRANCH_PROTECTION.md  BRANCH_PROTECTION_UPDATED.md  CHANGELOG.md  CI_STATUS_CHECK_VERIFICATION.md  COMMIT_EXECUTION.md  COMMIT_PLAN_FIXES.md  EXECUTION_BOUNDARY_DESIGN.md  FINAL_COMMIT_PLAN.md  FINAL_STATUS.md  FINAL_VERIFICATION_SUMMARY.md  HASH_COMPUTATION_FIX.md  KERNEL_CONTRACT.md  KERNEL_CORRECT_GUIDELINES.md  KERNEL_FREEZE.md  MOTHERLABS_INTENT.md  NEXT_STEPS.md  README.md  REMAINING_HYGIENE_STEPS.md  SCORING_FIX_FINAL.md  SCORING_FIX_SUMMARY.md  SEMANTIC_INVARIANTS.md  STATUS.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
src/: __init__.py
src/motherlabs_kernel/: __init__.py  ambiguity.py  ambiguity_types.py  artifacts_blueprint.py  artifacts_refusal.py  artifacts_verification.py  canonical.py  commit_types.py  dag.py  dag_ids.py  dag_invariants.py  dag_types.py  engine_types.py  hash.py  ledger.py  ledger_types.py  ledger_validate.py  policy.py  policy_types.py  proposal_types.py  proposer_null.py  proposer_recorded.py  proposer_types.py  prune.py  refusal.py  replay.py  run_engine.py  scoring.py
tests/: test_ambiguity.py  test_boundary.py  test_canonical.py  test_dag.py  test_golden_run.py  test_hash.py  test_ledger.py  test_policy.py  test_proposer.py  test_refusal.py  test_run_and_replay.py  test_smoke.py
tests/fixtures/: golden_expected.json  golden_pin.json  golden_policy.json  golden_proposals.json  golden_seed.txt
